--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,7 +20,6 @@ ahash = { version = "0.7", default-features = false }
 emojicon = "0.3"
 serde_json = "1.0"
 regex = "1.5"
-stringplus = "0.1"
 edit-distance = "2.1"
-okkhor = "0.5"
+okkhor = { version = "0.5", features = ["regex"] }
 poriborton = "0.2"
