Adding benchmark action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,18 @@ jobs:
       - uses: actions-rs/cargo@v1
         with:
           command: test
+
+  bench:
+    name: Benchmark
+    strategy:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly-2021-07-05
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: bench --features bench
